--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3>Voluptatem dignissimos provident quasi</h3>
+              <h3>Henry Jay P. Natiola</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                A 2nd year Computer Engineering Student in Technological Institute of the Philippines - Quezon City
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
