--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                  <i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>October 21, 2001</span></li>  
-                    <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
+                    <p><strong>Birthday:</strong> 08/22/2003</p>
               
                   </div>
                 </div>
