--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <li><strong>Birthday:</strong> 08/22/2003</li>
+                    <li><i class="bi bi-chevron-right"></i><strong>Birthday:</strong> 08/22/2003</li>
               
                   </div>
                 </div>
