--- a/index.html
+++ b/index.html
@@ -103,9 +103,13 @@
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <li><strong>Birthday:</strong> 08/22/2003</li>
+                    <li><strong>Birthday: </strong> 08/22/2003</li>
                     <br>
-                    <li><strong>Phone:</strong> 09207975623</li>
+                    <li><strong>Phone: </strong> 09207975623</li>
+                    <br>
+                    <li><strong>City: </strong> Pasig City, Philippines</li>
+                    <br>
+                    <li><strong>City: </strong> Pasig City, Philippines</li>
               
                   </div>
                 </div>
