--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
+                    
                     <p><strong>Birthday: </strong> 08/22/2003</p>
                     <br>
                     <p><strong>Phone: </strong> 09207975623</p>
@@ -116,13 +117,13 @@
 
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <h2>
+                    <p style="color:black"><h4>
                     <p><strong>Age: </strong> 20</p>
                     <br>
                     <p><strong>Email: </strong> qhjpnatiola@tip.edu.ph</p>
                     <br>
                     <p><strong>Course: </strong> Computer Engineer</p>
-                    </h2>
+                    </h4></p>
                   </div>
                 </div>
 
