--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 <p>App</p>
               </div>
               <div class="portfolio-links">
-                <a href="https://docs.google.com/document/d/16mKrp1dsImBl4II7J-K2N3yNu-dpFqn6/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" data-gallery="portfolioGallery"  title="HOA1"><i class="bx bx-plus"></i></a>
+                <a href="https://docs.google.com/document/d/16mKrp1dsImBl4II7J-K2N3yNu-dpFqn6/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank"  data-gallery="portfolioGallery"  title="HOA1"><i class="bx bx-plus"></i></a>
                 <a href="https://github.com/Jayryy/HOA1_CPE232" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
