--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/16mKrp1dsImBl4II7J-K2N3yNu-dpFqn6/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank"  data-gallery="portfolioGallery"  title="HOA1"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/Jayryy/HOA1_CPE232" title="GITHUB"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/Jayryy/HOA1_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -376,8 +376,8 @@
                 <p>App</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/13Sj2pUh3y9zH5u2HxbbwvvzTArUBcevj/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA2"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA2_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -390,8 +390,8 @@
                 <p>App</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1V4-TyR5rnYiFE4rpcfFJTpCBA2CTWb4V/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA3"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA3_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -404,8 +404,8 @@
                 <p>App</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1W9soptPqUmJmOSgTzZi3-jKzyY-N3tFJ/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA4"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA4_CPE232" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -418,8 +418,8 @@
                 <p>App</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1rtOCSSLyHEWtDtU3tYW8jWgWP-53bLl_/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA5"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA5_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -433,8 +433,8 @@
                 <p>App</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1RrrtCQbNkJFPpToXCH_iBglyfERDXyQyL8IhQ5fot10/edit?usp=sharing" target="_blank" data-gallery="portfolioGallery" title="PRELIM"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/Natiola_PrelimExam" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -448,8 +448,8 @@
                 <p>Card</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1ZMMeMQi0kxqyPcjnCekVnxdX1jpkRpCX/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA6"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/CPE232S4_Act6_Natiola" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -462,8 +462,8 @@
                 <p>Card</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/16HVAjOHr1SIprGXlODaB3N2uEEUthQXn/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA7"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA7_Natiola" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -476,8 +476,8 @@
                 <p>Card</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1gBFrvJy68WAeC-TFyJ_mtZPwMn4oFh9Q/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA8"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA8_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -490,8 +490,8 @@
                 <p>Card</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1Qwf1naCce-SSxQ4FARAXzVJZpTL6z8CQ/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA9"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA9_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -504,8 +504,8 @@
                 <p>Card</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1VJLSUkYiOdmSWMziWk91lGm4SrKm0-Lc/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA10"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA10_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -518,8 +518,8 @@
                 <p>Card</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1FAluNjNbaBDM4aJL7qw1KMUL1YQXtkr7/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="MIDTERM"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/CPE_MIDEXAM_NATIOLA" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -533,8 +533,8 @@
                 <p>Web</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1r8S9DI2YnqKRIKl7beFk2eqcRTNX440y/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA11"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA11_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -547,8 +547,8 @@
                 <p>Web</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1xn9hN_S7xF30bMsP3j9ZZRbYM4c8eMO4/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA12"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA12_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -561,8 +561,8 @@
                 <p>Web</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1ujSTPYIQoP6z_smnMj6ytIT_ztN-hPr1/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA13"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA13_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -575,8 +575,8 @@
                 <p>Web</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1mH3ocn5WBvGilRGcfMJe6FPeAnwhHFoe/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA14"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA14_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>  
@@ -589,8 +589,8 @@
                 <p>Web</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://docs.google.com/document/d/1sLYJp_DqePfQgo-TC_GlovSmuoY8g_PO/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA15"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/HOA15_CPE232" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>  
@@ -603,8 +603,8 @@
                 <p>Web</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://jayryy.github.io/index.html#" target="_blank" data-gallery="portfolioGallery" title="FINALS"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/FINALS_CPE232/blob/main/README.md" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>  
