--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activty 1</h4>
-                <p>App</p>
+                <p>Prelim</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/16mKrp1dsImBl4II7J-K2N3yNu-dpFqn6/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank"  data-gallery="portfolioGallery"  title="HOA1"><i class="bx bx-plus"></i></a>
@@ -373,7 +373,7 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 2</h4>
-                <p>App</p>
+                <p>Prelim</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/13Sj2pUh3y9zH5u2HxbbwvvzTArUBcevj/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA2"><i class="bx bx-plus"></i></a>
@@ -387,7 +387,7 @@
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 3</h4>
-                <p>App</p>
+                <p>Prelim</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1V4-TyR5rnYiFE4rpcfFJTpCBA2CTWb4V/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA3"><i class="bx bx-plus"></i></a>
@@ -401,7 +401,7 @@
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 4</h4>
-                <p>App</p>
+                <p>Prelim</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1W9soptPqUmJmOSgTzZi3-jKzyY-N3tFJ/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA4"><i class="bx bx-plus"></i></a>
@@ -415,7 +415,7 @@
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 5</h4>
-                <p>App</p>
+                <p>Prelim</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1rtOCSSLyHEWtDtU3tYW8jWgWP-53bLl_/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA5"><i class="bx bx-plus"></i></a>
@@ -430,7 +430,7 @@
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Prelim</h4>
-                <p>App</p>
+                <p>Prelim</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1RrrtCQbNkJFPpToXCH_iBglyfERDXyQyL8IhQ5fot10/edit?usp=sharing" target="_blank" data-gallery="portfolioGallery" title="PRELIM"><i class="bx bx-plus"></i></a>
@@ -445,7 +445,7 @@
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 6</h4>
-                <p>Card</p>
+                <p>Midterm</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1ZMMeMQi0kxqyPcjnCekVnxdX1jpkRpCX/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA6"><i class="bx bx-plus"></i></a>
@@ -459,7 +459,7 @@
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 7</h4>
-                <p>Card</p>
+                <p>Midterm</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/16HVAjOHr1SIprGXlODaB3N2uEEUthQXn/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA7"><i class="bx bx-plus"></i></a>
@@ -473,7 +473,7 @@
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 8</h4>
-                <p>Card</p>
+                <p>Midterm</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1gBFrvJy68WAeC-TFyJ_mtZPwMn4oFh9Q/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA8"><i class="bx bx-plus"></i></a>
@@ -487,7 +487,7 @@
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 9</h4>
-                <p>Card</p>
+                <p>Midterm</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1Qwf1naCce-SSxQ4FARAXzVJZpTL6z8CQ/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA9"><i class="bx bx-plus"></i></a>
@@ -501,7 +501,7 @@
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 10</h4>
-                <p>Card</p>
+                <p>Midterm</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1VJLSUkYiOdmSWMziWk91lGm4SrKm0-Lc/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA10"><i class="bx bx-plus"></i></a>
@@ -515,7 +515,7 @@
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Midterm</h4>
-                <p>Card</p>
+                <p>Midterm</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1FAluNjNbaBDM4aJL7qw1KMUL1YQXtkr7/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="MIDTERM"><i class="bx bx-plus"></i></a>
@@ -530,7 +530,7 @@
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 11</h4>
-                <p>Web</p>
+                <p>Final</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1r8S9DI2YnqKRIKl7beFk2eqcRTNX440y/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA11"><i class="bx bx-plus"></i></a>
@@ -544,7 +544,7 @@
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 12</h4>
-                <p>Web</p>
+                <p>Final</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1xn9hN_S7xF30bMsP3j9ZZRbYM4c8eMO4/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA12"><i class="bx bx-plus"></i></a>
@@ -558,7 +558,7 @@
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 13</h4>
-                <p>Web</p>
+                <p>Final</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1ujSTPYIQoP6z_smnMj6ytIT_ztN-hPr1/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA13"><i class="bx bx-plus"></i></a>
@@ -572,7 +572,7 @@
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 14</h4>
-                <p>Web</p>
+                <p>Final</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1mH3ocn5WBvGilRGcfMJe6FPeAnwhHFoe/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA14"><i class="bx bx-plus"></i></a>
@@ -586,7 +586,7 @@
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 15</h4>
-                <p>Web</p>
+                <p>Final</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1sLYJp_DqePfQgo-TC_GlovSmuoY8g_PO/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="HOA15"><i class="bx bx-plus"></i></a>
@@ -600,7 +600,7 @@
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Finals</h4>
-                <p>Web</p>
+                <p>Final</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://jayryy.github.io/index.html#" target="_blank" data-gallery="portfolioGallery" title="FINALS"><i class="bx bx-plus"></i></a>
