--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
               </div>
               <div class="portfolio-links">
                 <a href="https://docs.google.com/document/d/1RrrtCQbNkJFPpToXCH_iBglyfERDXyQyL8IhQ5fot10/edit?usp=sharing" target="_blank" data-gallery="portfolioGallery" title="PRELIM"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/Jayryy/Natiola_PrelimExam" title="GITHUB"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/Jayryy/Natiola_PrelimExam" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
