--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Managing corporate servers with a DevOps culture is the main topic of this course. Students will learn how to use Ansible for configuration management, de facto standard monitoring practices, and Git for collaboration in order to run a DevOps environment on Linux servers. They will also learn how to use cloud services and containerized technologies to create an immutable environment and monitor and leverage alerting in the DevOps environment. This course is also intended to reflect the problems that we currently face in the actual world and how to resolve them.
+</p>
         </div>
 
         <div class="row">
