--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <p><h2>
-                    <p><strong>Birthday: </strong> 08/22/2003</p>
+                    <p><strong>Birthday: </strong> August 22, 2003</p>
                     <br>
                     <p><strong>Phone: </strong> 09207975623</p>
                     <br>
