--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-prelim">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                <h4>Activty 1</h4>
+                <p>Prelim</p>
               <div class="portfolio-info">
                 <h4>Activty 1</h4>
                 <p>Prelim</p>
