--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-prelim">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/PMF.jpg" class="img-fluid" alt="">
-                <h4>Activty 1</h4>
-                <p>Prelim</p>
+                <p align="justify"><h4>Activty 1</h4><p>
               <div class="portfolio-info">
                 <h4>Activty 1</h4>
                 <p>Prelim</p>
