--- a/index.html
+++ b/index.html
@@ -418,9 +418,12 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Learnings</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Learnings</h2>          
+          <p>The management of corporate servers within a DevOps culture is the main topic of CPE232. Learn how to monitor and use alerts in a DevOps environment by using Ansible for configuration management and de facto standard monitoring processes in this course. Additionally, you will become proficient in the principles of managing a DevOps environment on Linux servers.</p>
+          <p>My route was widened by enrolling in Managing Enterprise, particularly in relation to Linux—a free, open-source operating system that allows us to practice programming. This semester, I gained a lot of experience with Github, roles, monitoring tools, and Ansible. Ansible had a lot of bugs when I first started using it, which made things difficult. However, as time went on, I came to appreciate using Ansible because it allows developers to work more quickly than with a traditional installation. 
+</p>
         </div>
+      
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
@@ -500,7 +503,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; © Managing Enterprise Servers
+        &copy; Managing Enterprise Servers
       </div>
     </div>
   </footer><!-- End  Footer -->
