--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
  <!-- ======= PRELIM ======= -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-prelim">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/PMF.jpg" class="img-fluid" alt="">
-                <p align="center"><h4>Activty 1</h4></p>
+              <img src="assets/img/portfolio/HOA1.png" class="img-fluid" alt="">          
               <div class="portfolio-info">
                 <h4>Activty 1</h4>
                 <p>Prelim</p>
@@ -169,7 +168,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-prelim">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 2</h4>
                 <p>Prelim</p>
@@ -183,7 +182,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-prelim">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 3</h4>
                 <p>Prelim</p>
@@ -197,7 +196,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-prelim">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 4</h4>
                 <p>Prelim</p>
@@ -211,7 +210,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-prelim">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA5.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 5</h4>
                 <p>Prelim</p>
@@ -226,7 +225,7 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-prelim">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/PMF.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/EXAM 1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Prelim</h4>
                 <p>Prelim</p>
@@ -241,7 +240,7 @@
  <!-- ======= MIDTERM ======= -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-midterm">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA6.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 6</h4>
                 <p>Midterm</p>
@@ -255,7 +254,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-midterm">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA7.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 7</h4>
                 <p>Midterm</p>
@@ -269,7 +268,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-midterm">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA8.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 8</h4>
                 <p>Midterm</p>
@@ -283,7 +282,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-midterm">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA9.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 9</h4>
                 <p>Midterm</p>
@@ -297,7 +296,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-midterm">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA10.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 10</h4>
                 <p>Midterm</p>
@@ -311,7 +310,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-midterm">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/PMF.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/EXAM 2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Midterm</h4>
                 <p>Midterm</p>
@@ -326,7 +325,7 @@
   
           <div class="col-lg-4 col-md-6 portfolio-item filter-finals">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA11.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 11</h4>
                 <p>Final</p>
@@ -340,7 +339,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-finals">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA12.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 12</h4>
                 <p>Final</p>
@@ -354,7 +353,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-finals">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA13.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 13</h4>
                 <p>Final</p>
@@ -368,7 +367,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-finals">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA14.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 14</h4>
                 <p>Final</p>
@@ -382,7 +381,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-finals">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/HOA15.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Activity 15</h4>
                 <p>Final</p>
@@ -396,7 +395,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-finals">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/PMF.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/EXAMS 3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Finals</h4>
                 <p>Final</p>
