--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Activities</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Learnings</a></li>
+          <li><a class="nav-link scrollto" href="#learnings">Learnings</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -134,7 +134,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Activities</h2>
           <p align="justify">Managing corporate servers with a DevOps culture is the main topic of this course. Students will learn how to use Ansible for configuration management, de facto standard monitoring practices, and Git for collaboration in order to run a DevOps environment on Linux servers. They will also learn how to use cloud services and containerized technologies to create an immutable environment and monitor and leverage alerting in the DevOps environment. This course is also intended to reflect the problems that we currently face in the actual world and how to resolve them.
 <p>
         </div>
@@ -414,7 +414,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <section id="learnings" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
