--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <div class="section-title">
           <h2>Activities</h2>
-          <p align="justify">Managing corporate servers with a DevOps culture is the main topic of this course. Students will learn how to use Ansible for configuration management, de facto standard monitoring practices, and Git for collaboration in order to run a DevOps environment on Linux servers. They will also learn how to use cloud services and containerized technologies to create an immutable environment and monitor and leverage alerting in the DevOps environment. This course is also intended to reflect the problems that we currently face in the actual world and how to resolve them.
+          <p align="justify">Managing corporate servers with a DevOps culture is the main topic of this course. Students will learn how to use Ansible for configuration management, the standard monitoring practices, and Git for collaboration in order to run a DevOps environment on Linux servers. They will also learn how to use cloud services and containerized technologies to create an immutable environment and monitor and leverage alerting in the DevOps environment. This course is also intended to reflect the problems that we currently face in the actual world and how to resolve them.
 <p>
         </div>
 
@@ -474,10 +474,12 @@
           <div class="col-lg-4 col-md-4">
             <div class="contact-about">
               <h3>Lonely</h3>
-              <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+              <p>Hi there!</p>
+              <br>
+              <p>The contents in this site are work of my own.Enjoy and explore!</p>
               <div class="social-links">
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.facebook.com/henryjay.natiola" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
                 <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
