--- a/index.html
+++ b/index.html
@@ -317,6 +317,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-midterm">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/EXAMS 2.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Midterm</h4>
+                <p>Midterm</p>
+              </div>
+              <div class="portfolio-links">
+                <a href="https://docs.google.com/document/d/1FAluNjNbaBDM4aJL7qw1KMUL1YQXtkr7/edit?usp=sharing&ouid=106999854019944138400&rtpof=true&sd=true" target="_blank" data-gallery="portfolioGallery" title="MIDTERM"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/Jayryy/CPE_MIDEXAM_NATIOLA" target="_blank" title="GITHUB"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           
  <!-- ======= FINAL ======= -->
   
