--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="count-box">
                     <p><h2>
                     <p><strong>Birthday: </strong></p>
-                    <p></p>August 22, 2003</p>
+                    <h2><p></p>August 22, 2003</p></h2>
                     <br>
                     <p><strong>Phone: </strong> 
                     <p></p>09207975623</p>
