--- a/index.html
+++ b/index.html
@@ -87,14 +87,11 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <p><h2>
-                    <p><strong>Birthday: </strong></p>
-                    <h2><p></p>August 22, 2003</p></h2>
+                    <p><strong>Birthday: </strong> August 22, 2003</p>
                     <br>
-                    <p><strong>Phone: </strong> 
-                    <p></p>09207975623</p>
+                    <p><strong>Phone: </strong> 09207975623</p>
                     <br>
-                    <p><strong>City: </strong></p>
-                    <p></p>Pasig City, Philippines</p>
+                    <p><strong>City: </strong>Pasig City, Philippines</p>
                     <br>
                     </h2></p>
               
@@ -104,14 +101,11 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <p><h2>
-                    <p><strong>Age: </strong></p>
-                    <p></p>20</p>
+                    <p><strong>Age: </strong>20</p>
                     <br>
-                    <p><strong>Email: </strong></p>
-                    <p></p>qhjpnatiola@tip.edu.ph</p>
+                    <p><strong>Email: </strong>qhjpnatiola@tip.edu.ph</p>
                     <br>
-                    <p><strong>Course: </strong></p>
-                    <p></p>Computer Engineer</p>
+                    <p><strong>Course: </strong>Computer Engineer</p>
                     </h2></p>
                   </div>
                 </div>
