--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="info">
               <div class="d-flex align-items-center">
-                <a href="https://www.google.com/maps/place/3418+C.+Raymundo+Ave,+Pasig,+1609+Metro+Manila/@14.5850001,121.0847769,17z/data=!3m1!4b1!4m6!3m5!1s0x3397c7fb2dc2ec0d:0x634a2621615f04f3!8m2!3d14.5849949!4d121.0873518!16s%2Fg%2F11gjtb84cr?entry=ttu"><i class="bi bi-geo-alt"></i>
+                <a href="https://www.google.com/maps/place/3418+C.+Raymundo+Ave,+Pasig,+1609+Metro+Manila/@14.5850001,121.0847769,17z/data=!3m1!4b1!4m6!3m5!1s0x3397c7fb2dc2ec0d:0x634a2621615f04f3!8m2!3d14.5849949!4d121.0873518!16s%2Fg%2F11gjtb84cr?entry=ttu" target="_blank"><i class="bi bi-geo-alt">  </i>
                 <p>3418 C. Raymundo Ave, Pasig, 1609 Metro Manila</p>
               </div>
 
