--- a/index.html
+++ b/index.html
@@ -450,8 +450,7 @@
 
           <div class="col-lg-4 col-md-4">
             <div class="contact-about">
-              <h3>Lonely</h3>
-              <p>Hi there!</p>         
+              <h3>Hi there!</h3>                 
               <p>The contents in this site are work of my own.Enjoy and explore!</p>             
               </div>
             </div>
