--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <br>
                     <p><strong>Email: </strong>qhjpnatiola@tip.edu.ph</p>
                     <br>
-                    <p><strong>Course: </strong>Computer Engineer</p>
+                    <p><strong>Program: </strong>Computer Engineer</p>
                     </h2></p>
                   </div>
                 </div>
@@ -475,9 +475,7 @@
 
             </div>
           </div>
-
-          <br>
-
+        
           <div class="col-lg-5 col-md-8">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-group">
