--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
 
             </div>
           </div>
+      </div>
         
           <div class="col-lg-5 col-md-8">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
