--- a/index.html
+++ b/index.html
@@ -443,15 +443,14 @@
 
         <div class="section-title">
           <h2>Hi there!</h2>
-          <p>This website is created solely for sharing my experiences and works with everyone!</p>
+          <p>This website is created solely for sharing my experiences and works with everyone!. The contents in this site are work of my own.Enjoy and explore!</p>
         </div>
 
         <div class="row">
 
           <div class="col-lg-4 col-md-4">
             <div class="contact-about">
-              <h3>Contact</h3>                 
-              <p>The contents in this site are work of my own.Enjoy and explore!</p>             
+              <h3>Contact</h3>                            
               </div>
             </div>
           </div>
@@ -475,7 +474,6 @@
 
             </div>
           </div>
-      </div>
         
           <div class="col-lg-5 col-md-8">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
