--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
           
           <p align="justify">The management of corporate servers within a DevOps culture is the main topic of CPE232. Learn how to monitor and use alerts in a DevOps environment by using Ansible for configuration management and de facto standard monitoring processes in this course. Additionally, you will become proficient in the principles of managing a DevOps environment on Linux servers.<p>
           <br>
-          <p align="justify">My route was widened by enrolling in Managing Enterprise, particularly in relation to Linux—a free, open-source operating system that allows us to practice programming. This semester, I gained a lot of experience with Github, roles, monitoring tools, and Ansible. Ansible had a lot of bugs when I first started using it, which made things difficult. However, as time went on, I came to appreciate using Ansible because it allows developers to work more quickly than with a traditional installation. 
+          <p align="justify">My route was widened by enrolling in Managing Enterprise, particularly in relation to Linux a free, open-source operating system that allows us to practice programming. This semester, I gained a lot of experience with Github, roles, monitoring tools, and Ansible. Ansible had a lot of bugs when I first started using it, which made things difficult. However, as time went on, I came to appreciate using Ansible because it allows developers to work more quickly than with a traditional installation. 
 <p>
         
         </div>
