--- a/index.html
+++ b/index.html
@@ -443,7 +443,8 @@
 
         <div class="section-title">
           <h2>Hi there!</h2>
-          <p>This website is created solely for sharing my experiences and works with everyone!. The contents in this site are work of my own.Enjoy and explore!</p>
+          <p>This website is created solely for sharing my experiences and works with everyone!.</p>
+          <p>The contents in this site are work of my own.Enjoy and explore!</p>
         </div>
 
         <div class="row">
