--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@
           <h2>Hi there!</h2>
           <p>This website is created solely for sharing my experiences and works with everyone!.</p>
           <p>The contents in this site are work of my own.Enjoy and explore!</p>
+        
+        </div>
 
         <div class="row">
 
